# beemel

./: .gitignore  .gitmodules  .jscpd.json  AGENTS.md  CITATION.cff  Cargo.toml  LICENSE  README.md
bml/: .gitignore  Cargo.toml  README.md
bml-core/: Cargo.toml  README.md  build.rs
bml-core/src/: ast.rs  borrow.rs  ceiling.rs  checker.rs  comptime.rs  consteval.rs  constfold.rs  context.rs  errors.rs  imports.rs  ir.rs  lexer.rs  lib.rs  libpath.rs  parser.rs  qualify.rs  region.rs  resolver.rs  source.rs  stack.rs  target.rs  types.rs
bml-core/src/arch/: arm.rs  mod.rs
bml-core/src/verify/: db.rs  hwaddrs.rs  mod.rs  preempt.rs  report.rs
bml-core/tests/: fuzz_frontend.rs
bml-lsp/: Cargo.toml  README.md
bml-lsp/src/: main.rs
bml/examples/blue-pill/: README.md  blinky-qemu.bml  blinky.bml  debug.sh  flash.sh  run-qemu.sh  stm32f103c8.target
bml/examples/blue-pill/svd/: gpioc.bml  rcc.bml
bml/examples/microbit-v1/: blinky.bml  clock.bml  ecb.bml  ficr.bml  flash.sh  gpiote.bml  lpcomp.bml  microbit-v1.target  mpu.bml  power.bml  qdec.bml  radio.bml  rtc0.bml  rtc1.bml  scroll.bml  spi0.bml  spi1.bml  spis1.bml  swi.bml  temp.bml  timer0.bml  timer1.bml  twi0.bml  uart0.bml  uicr.bml  wdt.bml
bml/examples/microbit-v1-nrf51/: build.sh  microbit.target  nrf51.target  nrf51_periph.bml  probe.bml
bml/examples/microbit-v1/svd/: aar.bml  adc.bml  ccm.bml  clock.bml  ecb.bml  ficr.bml  gpio.bml  gpiote.bml  nvmc.bml  ppi.bml  (+11 more)
bml/examples/nucleo-h723zg-ptp/: BRINGUP.md  README.md  board.bml  build.sh  cache.bml  clocks.bml  copy_dma.bml  dwt.bml  eth_dma.bml  fault.bml  flash.sh  main.bml  main_bench.bml  main_controller.bml  main_health_loop.bml  main_mic_node.bml  phy_lan8742.bml  ptp_clock.bml  stm32h723.target  stm32h723zg.target  timer.bml
bml/examples/rp2350-dma-pio/: build.sh  dma_pio.bml  dma_pio.target  dma_pio_hw.bml
bml/examples/rp2350-pico2w/: build.sh  pico2w.target  probe.bml  rp2350.target  rp2350_periph.bml
bml/examples/rp2350-pio-blink/: build.sh  pio_alloc.bml  pio_blink.bml  pio_blink.target  pio_blink_dsl.bml  pio_reloc.bml
bml/src/: main.rs
bml/tests/: diagnostic_coverage.rs  exec.rs  tests.rs
bml/tests/fixtures/: addr_handoff.bml  addr_handoff_bad.bml  addr_of_shared.bml  addr_of_shared_in_claim.bml  addr_unknown_region.bml  addrof_index_moved_error.bml  addrof_index_no_consume.bml  addrof_move_no_consume.bml  agent_ptr_escape_arg.bml  agent_ptr_escape_asm.bml  agent_ptr_escape_return.bml  agent_ptr_volatile.bml  align_bad_value_error.bml  align_derive.bml  align_too_large_error.bml  array_init_basic.bml  array_mismatch_error.bml  array_read_basic.bml  array_repeat_call_error.bml  array_repeat_ok.bml  array_repeat_runtime_count_error.bml  array_write_basic.bml  as_cast.bml  asm_cpsid.bml  asm_nop.bml  asm_output_nonplace_error.bml  assert_ikos_ir.bml  assert_type_error.bml  assign_type_mismatch_error.bml  assume_assert_ir.bml  assume_assert_pass.bml  assume_assert_type_error.bml  assume_ir_unreach.bml  bit_b8.bml  bit_bad_argcount_error.bml  bit_bad_base_error.bml  bit_debug.bml  bit_len_overstates.bml  bit_mut_index_read_twice.bml  bit_mut_move_error.bml  (+591 more)
bml/tests/snapshots/: bitband_field_read_main.snap  bitband_field_write_main.snap  field_enum_u8_main.snap  field_range_main.snap  field_u16_main.snap  field_u8_main.snap  naked_fn.snap  naked_isr.snap  startup_basic_reset.snap  startup_user_reset.snap  tailchain_calls.snap  tailchain_leaf.snap
(+390 files in other folders)
