[package]
name = "bml-core"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[lib]
name = "bml_core"
path = "src/lib.rs"

[dependencies]
codespan-reporting = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# `bundled` compiles sqlite3 in (public domain): the verify db is read with
# zero system/library variance, part of making `bml verify` self-contained.
rusqlite = { version = "0.32", features = ["bundled"] }

[lints]
workspace = true
