[package]
name = "bml-core"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
license = "Apache-2.0"

[lib]
name = "bml_core"
path = "src/lib.rs"

[features]
# Link the IKOS analyzer into the binary (fork's ikos-analyzer-core static
# library) and run analyses in-process instead of spawning ikos-analyzer.
# Requires BML_IKOS_BUILD_DIR at build time; see build.rs.
ikos-static = []

[dependencies]
codespan-reporting = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# `bundled` compiles sqlite3 in (public domain): the verify db is read with
# zero system/library variance, part of making `bml verify` self-contained.
rusqlite = { version = "0.40", features = ["bundled"] }
# PIO assembler for the in-language `pio { }` block. Isolated, no bml deps; the
# block is a thin parser surface over it.
pio-encode = { path = "../pio-encode" }

[lints]
workspace = true
