[package]
name = "bml-lsp"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[[bin]]
name = "bml-lsp"
path = "src/main.rs"

[dependencies]
bml-core = { path = "../bml-core" }
lsp-server = "0.7"
lsp-types = { version = "0.97", features = ["proposed"] }
serde_json = "1"

[lints]
workspace = true
