[package]
name = "beemel"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
license = "Apache-2.0"

# The package is `beemel` (the crates.io name), but the binary stays `bml` so the
# command and all docs/tutorials are unchanged.
[[bin]]
name = "bml"
path = "src/main.rs"

[dependencies]
bml-core = { path = "../bml-core" }

[features]
# Run IKOS in-process instead of spawning ikos-analyzer; see bml-core.
ikos-static = ["bml-core/ikos-static"]

[lints]
workspace = true
